--- a/ANB/analysisnotes.tex
+++ b/ANB/analysisnotes.tex
@@ -369,5 +369,6 @@ We ﬁrst state the following technical lemma:
 	\begin{equation*}
 		\alpha=\mathsf{dist}(z,Y)=\inf_{y\in Y}\norm{z-y}>0.
 	\end{equation*}
+	Pick $\varepsilon\in(0,1)$. There exists $\overline{y}\in Y$ such that $\norm{\overline{y}-z}\leq\frac{\alpha}{1-\varepsilon}$ (otherwise we would get $\mathsf{dist}(z,Y)\geq\frac{\alpha}{1-\varepsilon}>\alpha$!)
 \end{fancyproof}
 \end{document}
