--- a/ANB/pacco.sty
+++ b/ANB/pacco.sty
@@ -497,6 +497,7 @@
 \newcommand{\ybar}{\overline{Y}}
 \newcommand{\xxbar}{\overline{\xbar}}
 \newcommand{\xtilde}{\widetilde{X}}
+\newcommand{\unmezz}}{\frac{1}{2}}
 \newcommand{\ifonly}{\underline{if and only if}}
 
 		
