txs auto checkin

--- a/Tesi pf/main.tex
+++ b/Tesi pf/main.tex
@@ -1,14 +1,3 @@
-% Latex template for submission to the XXth International Conference on the use of Computers in Radiation therapy
-% (ICCR 2024)
-%
-% Date:   Oct 2023
-%
-% Modified from
-% https://github.com/gschramm/fully3d_templates
-% 
-% To build this document, we recommend to use latexmk via:
-% ```latexmk -pdf iccr2024_template.tex```
-% Building in the online editor overleaf also works.
 
 \documentclass[11pt]{article}
 \usepackage{iccr2024}
@@ -58,7 +47,7 @@
 % dummy_content.tex shows how to add sections, figures, tables, formulas, and references
 % remove the following line, it just adds dummy content
 
-\input{twocol2}
+\input{content}
 
 
 %-------------------------------------------------------------------------------------------
