txs auto checkin

--- a/Tesi pf/references.bib
+++ b/Tesi pf/references.bib
@@ -4,9 +4,9 @@
     publisher = {L'Epos},
     year = {2004}
 }
-@book{lock,
-    author = {Lock, G.},
-    title = {Forces in motion: The Music and Thoughts of Anthony Braxton},
+@book{lee,
+    author = {Paul Bley \& David Lee},
+    title = {Stopping Time: Paul Bley and the Transformation of Jaz},
     publisher = {Da Capo Press},
     year = {1988}
 }
