txs auto checkin

--- a/Tesi pf/references.bib
+++ b/Tesi pf/references.bib
@@ -5,7 +5,7 @@
     year = {2004}
 }
 @book{lee,
-    author = {Paul Bley \& David Lee},
+    author = {Paul Bley and David Lee},
     title = {Stopping Time: Paul Bley and the Transformation of Jaz},
     publisher = {Da Capo Press},
     year = {1988}
