txs auto checkin

--- a/Tesi pf/iccr2024.sty
+++ b/Tesi pf/iccr2024.sty
@@ -34,7 +34,7 @@
 \usepackage{fancyhdr}
 \usepackage{setspace}
 \usepackage{parskip}
-\usepackage[backend=biber,style=plain,autocite=inline]{biblatex}
+\usepackage[backend=biber,style=authortitle,autocite=inline]{biblatex}
 \usepackage{csquotes}
 \usepackage{changepage}
 \usepackage{paracol}
