--- a/Tesi pf/iccr2024.sty
+++ b/Tesi pf/iccr2024.sty
@@ -34,7 +34,8 @@
 \usepackage{fancyhdr}
 \usepackage{setspace}
 \usepackage{parskip}
-\usepackage[backend=biber,style=authoryear,autocite=inline]{biblatex}
+\usepackage[backend=biber,style=authoryear-comp,autocite=inline,natbib = true,
+sorting = nyt, minalphanames=3]{biblatex}
 \usepackage{csquotes}
 \usepackage{changepage}
 \usepackage{paracol}
