--- a/Tesi pf/main.tex
+++ b/Tesi pf/main.tex
@@ -46,6 +46,6 @@
 
 
 %-------------------------------------------------------------------------------------------
-\printbibliography[title={eh}]
+\printbibliography
 
 \end{document}
