--- a/Tesi pf/references.bib
+++ b/Tesi pf/references.bib
@@ -4,9 +4,9 @@
     publisher = {L'Epos},
     year = {2004}
 }
-@book{lee,
-    author = {Bley, Paul and Lee, David},
-    title = {Stopping Time: Paul Bley and the Transformation of Jaz},
-    publisher = {Da Capo Press},
-    year = {1988}
+@book{stopping,
+	title={Stopping time. Paul Bley and the transformation of jazz},
+	author={Bley, Paul and Lee, David},
+	publisher = {Vehicule Press},
+	year={1999}
 }
