committo un crimine

--- a/PT/chap3.tex
+++ b/PT/chap3.tex
@@ -2747,7 +2747,7 @@ Hence by the martingale convergence theorem we have $Y_{n}\to Y_{\infty}$ a.s. w
 		\end{equation*}
 		since we are subtracting to $a_{n}$ a quantity that goes towards $\infty$ more slowly. So the sequence still goes towards infinity and this means that the event ${S<\infty}$ is basically the limit of the increasing sequence of events 
 		\[{\left\{S<a_{n}-\sqrt{ba_{n}}\right\}}_{n}.\]
-		Since $S_{n\leq S}$ we have that
+		Since $S_{n}\leq S$ we have that
 		\begin{equation*}
 			\left\{S<a_{n}-\sqrt{ba_{n}}\right\}\subset\left\{S_{n}<a_{n}-\sqrt{ba_{n}}\right\}
 		\end{equation*}
