ma vattela pija nderculo

--- a/PT/chap1.tex
+++ b/PT/chap1.tex
@@ -2094,7 +2094,7 @@
 		\emph{Lindeberg's lemma}:
 		Let $(Y_1,Y_2,\ldots,Y_k)$ be independent \rv s with mean zero and let $S=\sum_{j=1}^{k}Y_{j}$. Let us further assume that $\var S=1$. Let $f$ be a function which can be differentiated 3 times and let 
 		$f',f'',f'''$ be bounded and continuous and such that
-		\[|f'''|\leq x,\qquad c\in\R_+.\]
+		\[|f'''|\leq c,\qquad c\in\R_+.\]
 		Then for $Z\asstnr$
 		\[|\ev f\circ S-\ev f\circ Z|\leq c\sum_{j=1}^{k}\ev|Y_{j}|^{3}\]
 	\end{lemma}
