--- a/PT/probtheory.tex
+++ b/PT/probtheory.tex
@@ -31,12 +31,11 @@
 	\begin{figure}[h]
 		\centering
 		\includegraphics[width=\linewidth]{screenshot014}
-		\caption[The one and only truth]{Is it over for me anon?}
-		\label{fig:screenshot014}
+		\caption[The one and only truth]{Is it over for me anon?}\label{fig:screenshot014}
 	\end{figure}
 \end{closethedeal}
 \listoffigures  
 \end{document} 
 
 
-%THIS IS THE() DARK AGE OF LOVE   
+%THIS IS THE DARK AGE OF LOVE   
